@@ -7,8 +7,8 @@
  *
  * -----------------------------------------------------------------
  * File:          $RCSfile: OutputTest.h,v $
- * Date modified: $Date: 2002-03-20 19:49:12 $
- * Version:       $Revision: 1.3 $
+ * Date modified: $Date: 2002-03-20 20:06:35 $
+ * Version:       $Revision: 1.4 $
  * -----------------------------------------------------------------
  *
  *********************************************************** ggt-head end */
@@ -65,6 +65,7 @@ namespace gmtlTest
       void testQuat();
       void testTri();
       void testPlane();
+      void testSphere();
 
       static CppUnit::Test* suite()
       {
@@ -75,6 +76,7 @@ namespace gmtlTest
          test_suite->addTest( new CppUnit::TestCaller<OutputTest>("testQuat", &OutputTest::testQuat) );
          test_suite->addTest( new CppUnit::TestCaller<OutputTest>("testTri", &OutputTest::testTri) );
          test_suite->addTest( new CppUnit::TestCaller<OutputTest>("testPlane", &OutputTest::testPlane) );
+         test_suite->addTest( new CppUnit::TestCaller<OutputTest>("testSphere", &OutputTest::testSphere) );
 
          return test_suite;
       }
